# picture-possum

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  makerelease.sh  session.h
release/arch/: makerelease.sh
src/: CMakeLists.txt  ImageTypes.cpp  ImageTypes.h  KeyGenerator.cpp  KeyGenerator.h  Settings.cpp  Settings.h  Tag.cpp  Tag.h  TagListModel.cpp  TagListModel.h  TinyEXIF.cpp  image.cpp  image.h  imagesListModel.cpp  imagesListModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  session.cpp  session.h  settingswidget.cpp  settingswidget.h  settingswidget.ui  tagdialog.cpp  tagdialog.h  tagdialog.ui
test/: CMakeLists.txt  FindFilesTest.cpp  TestExif.cpp  Tester.cpp
